--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   tinycolor: ^1.0.2
   webfeed: ^0.4.2
   http: ^0.12.0
+  timezone: ^0.5.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
