--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   webfeed: ^0.4.2
   http: ^0.12.0
   timezone: ^0.5.6
+  #time_machine: ^0.9.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
