--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,9 +25,13 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
     }
     lintOptions {
         disable 'InvalidPackage'
     }
+}
+
+dependencies {
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
