--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   webfeed: ^0.4.2
   http: ^0.12.0+4
   timezone: ^0.5.6
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
