--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   tinycolor: ^1.0.2
   webfeed: ^0.4.2
-  http: ^0.12.0
+  http: ^0.12.0+4
   timezone: ^0.5.6
   #time_machine: ^0.9.12
 dev_dependencies:
