--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   webfeed: ^0.4.2
   http: ^0.12.0+4
   timezone: ^0.5.6
-  shared_preferences: ^0.5.6+3
+  time_machine: ^0.9.15
+
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
