--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   timezone: ^0.5.9
   time_machine: ^0.9.16
 
+  cloud_firestore: ^0.14.3
+
   shared_preferences: ^0.5.12+4
 
 dev_dependencies:
