--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  tinycolor: ^1.0.2
-  webfeed: ^0.4.2
-  http: ^0.12.0+4
+  tinycolor: ^1.0.3
+  webfeed: ^0.6.0
+  http: ^0.12.2
   timezone: ^0.5.9
   time_machine: ^0.9.16
-
-  cloud_firestore: ^0.14.3
-
+  cloud_firestore: ^0.15.0
   shared_preferences: ^0.5.12+4
 
 dev_dependencies:
